--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "my-portfolio-app",
-	"homepage": ".",
+	"homepage": "https://github.com/ninhdavid/portfolio.git/",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
@@ -15,6 +15,7 @@
 		"@tippyjs/react": "^4.2.6",
 		"axios": "^1.2.5",
 		"classnames": "^2.3.2",
+		"gh-pages": "^5.0.0",
 		"normalize.css": "^8.0.1",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
@@ -30,7 +31,9 @@
 		"start": "react-app-rewired start",
 		"build": "react-app-rewired build",
 		"test": "react-app-rewired test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build"
 	},
 	"eslintConfig": {
 		"extends": [
