--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 	},
 	"scripts": {
 		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build https://github.com/ninhdavid/portfolio.git",
+		"deploy": "gh-pages -d build",
 		"start": "react-app-rewired start",
 		"build": "react-app-rewired build",
 		"test": "react-app-rewired test",
